syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "internal/api/v1/account.proto";

option go_package = "/testbank";

// User 관련 메시지
message User {
  int64 id = 1;
  string name = 2;
  string birth = 3;
  string phone_number = 4;
  string password = 5; // 비밀번호 추가
  repeated Account accounts = 6; // 사용자의 계좌 목록
}

// User CRUD 요청/응답 메시지
message CreateUserRequest {
  string name = 1;
  string birth = 2;
  string phone_number = 3;
  string password = 4;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string birth = 3;
  string phone_number = 4;
  string password = 5;
}

message GetUserRequest {
  int64 id = 1;
}

message UserResponse {
  User user = 1;
}

message UserListResponse {
  repeated User users = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message GetAllUsersRequest {
    optional bool isDeleted = 1;
}

// 로그인 요청/응답 메시지
message LoginRequest {
  string phone_number = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}


// User 및 Account 서비스 정의
service UserService {
  // User CRUD
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc GetAllUsers(GetAllUsersRequest) returns (UserListResponse);

  // 로그인
  rpc Login(LoginRequest) returns (LoginResponse);
}
